// プロフィール作成リクエスト
syntax = "proto3";

package api.game;

message ProfileCreateRequest {
  string user_id = 1;
  string name = 2;
  string content = 3;
}
