// プロフィール作成レスポンス
syntax = "proto3";

package api.game;

import "profile/userProfile/user_profile.proto";

message ProfileGetResponse {
  optional UserProfile user_profile = 1;
}
