// プロフィール更新リクエスト
syntax = "proto3";

package api.game;

message ProfileUpdateRequest {
  string user_id = 1;
  string name = 2;
  string content = 3;
}
