// プロフィール更新レスポンス
syntax = "proto3";

package api.game;

import "profile/userProfile/user_profile.proto";

message ProfileUpdateResponse {
  optional UserProfile user_profile = 1;
}
